# crowdly

./: ABOUT.md  CLAUDE.md  LICENSE.md  README.md  WARP.md  consuming_content.php  eslint.config.js  home.php  index.html  index.php  new project.php  package-lock.json  package.json  project description.odt  project_page.php  start.php  tailwind.config.ts  vite.config.ts
Archive/: home.php  index.php  start.php
Database dumps/: backup.sql  backup_16_December_2025.sql
Documentation/: crowdly as described by warp.md  crowdly web.md  further development plan.md  postgreSQL commands.md  story page.odt
backend/: .env  package-lock.json  package.json
desktop app/: pyproject.toml
desktop app/src/distraction_free_wysiwyg_editor.egg-info/: PKG-INFO
desktop app/src/editor/: __init__.py  app.py  auth.py  crowdly_client.py  document.py  file_metadata.py  settings.py  storage.py  story_import.py  story_sync.py
desktop app/src/editor/exporting/: controller.py  epub_exporter.py  markdown_blocks.py  markdown_utils.py  pdf_exporter.py
desktop app/src/editor/i18n/: editor_ar.ts  editor_en.qm  editor_en.ts  editor_ru.qm  editor_ru.ts  editor_zh-Hans.ts  editor_zh-Hant.ts
desktop app/src/editor/importing/: __init__.py  controller.py  epub_importer.py  html_utils.py  odt_importer.py  registry.py
desktop app/src/editor/ui/: compare_revisions.py  crowdly_login_dialog.py  main_window.py  open_story_dialog.py  preview_widget.py
desktop app/src/editor/versioning/: __init__.py  local_queue.py
desktop client/: .gitignore
modules/: footer  header
src/: App.tsx  index.css
(+215 files in other folders)
