[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distraction-free-wysiwyg-editor"
version = "0.1.0"
description = "Crowdly editor - distraction free WYSIWYG Markdown / HTML editor"
requires-python = ">=3.10"
dependencies = [
    "pyside6",
    "markdown",
    "psycopg2-binary",
    "bcrypt",
    "python-docx",
    "odfpy",
    "pdfminer.six",
    "ebooklib",
    "markdownify",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
